fix loader z-index

--- a/src/scss/sections/_loader.scss
+++ b/src/scss/sections/_loader.scss
@@ -4,6 +4,7 @@ body.--loading {
   .loader {
     opacity: 1;
     transition: opacity 0.3s ease-in-out;
+    z-index: 10001;
   }
 }
 
@@ -17,7 +18,7 @@ body.--loading {
   top: 0;
   left: 0;
   background-color: #fff;
-  z-index: 10001;
+  z-index: -1;
   overflow: hidden;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
